--- a/usr.bin/seq/Makefile
+++ b/usr.bin/seq/Makefile
@@ -1,5 +1,6 @@
-#       $NetBSD: Makefile,v 1.3 2009/04/14 22:15:26 lukem Exp $
 # $MidnightBSD$
+#       $NetBSD: Makefile,v 1.3 2009/04/14 22:15:26 lukem Exp $
+# $FreeBSD: stable/10/usr.bin/seq/Makefile 204103 2010-02-19 23:54:12Z delphij $
 
 PROG=	seq
 DPADD=	${LIBM}
