--- a/usr.bin/seq/Makefile
+++ b/usr.bin/seq/Makefile
@@ -1,9 +1,13 @@
-# $MidnightBSD$
 #       $NetBSD: Makefile,v 1.3 2009/04/14 22:15:26 lukem Exp $
-# $FreeBSD: stable/10/usr.bin/seq/Makefile 204103 2010-02-19 23:54:12Z delphij $
+# $FreeBSD: stable/11/usr.bin/seq/Makefile 335739 2018-06-27 21:03:05Z kevans $
+
+.include <src.opts.mk>
 
 PROG=	seq
-DPADD=	${LIBM}
-LDADD=	-lm
+
+LIBADD=	m
+
+HAS_TESTS=
+SUBDIR.${MK_TESTS}+=	tests
 
 .include <bsd.prog.mk>
