--- a/lib/libsqlite3/Makefile
+++ b/lib/libsqlite3/Makefile
@@ -12,7 +12,8 @@ CFLAGS+=	-I${SQLITEDIR} -DSQLITE_ENABLE_FTS3 -DSQLITE_OS_UNIX=1 \
 		-DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 \
 		-DHAVE_STDLIB_H=1 -DHAVE_INTTYPES_H=1 -DREENTRANT=1 \
 		-DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_RTREE=1 \
-		-DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_FTS4
+		-DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_FTS4 \
+		-DSQLITE_HAVE_ZLIB
 
 WARNS?=		0
 
@@ -20,8 +21,8 @@ NO_MAN=
 
 INCS=		${SQLITEDIR}/sqlite3.h ${SQLITEDIR}/sqlite3ext.h
 
-DPADD=	${LIBPTHREAD} ${LIBM}
-LDADD=	-lpthread -lm
+DPADD=	${LIBPTHREAD} ${LIBM} ${LIBZ}
+LDADD=	-lpthread -lm -lz
 
 .if !defined(COMPAT_32BIT)
 afterinstall: 
